<resources>
    <string name="app_name">Cemix</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="logout">Çıkış</string>
    <string name="select_factory">Fabrika Seçimi</string>
    <string name="YOU_HAVE_TO_MAKE_SURE_YOU_FILL_ALL_THE_FIELDS">Tüm alanları doldurduğunuzdan emin olun.</string>
    <string name="closeapp">Çıkış yapmak üzeresiniz?</string>
    <string name="info">Bilgi</string>
    <string name="available_token_not_found">Hatalı giriş</string>
    <string name="error">Hata</string>
    <string name="enter_valid_email">E-mail giriniz</string>
    <string name="enter_password">Şifre giriniz</string>
    <string name="warning">Uyarı</string>
    <string name="eposta">Eposta adresi</string>
    <string name="securtycode">Güvenlik Kodu Gönder</string>
    <string name="securtycodesend">Güvenlik Kodu</string>
    <string name="entersecurtycodesend">Güvenlik Kodu Giriniz</string>
    <string name="verifysecurtycodesend">Güvenlik Kodunu Doğrula</string>
    <string name="forgotpassword">Şifremi Unuttum</string>
    <string name="passwordnotmatch">Şifreler Uyumsuz</string>
    <string name="enterpass">10 haneli şifre giriniz</string>
    <string name="enterpass2">Lütfen alanlara 10 haneli ve aynı şifreyi giriniz</string>
    <string name="imreaded">Okudum, onaylıyorum</string>
    <string name="letcontinue">Devam Et</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="succes">Başarılı</string>
    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="noauth">Kullanıcı bilgilerini kontrol ediniz</string>
    <string name="settings">Ayarlar</string>
    <string name="save">Kaydet</string>
    <string name="newpassword">Yeni Şifre</string>
    <string name="newpasswordagain">Yeni Şifre Tekrar</string>
    <string name="incorrectcode">Hatalı girişi</string>

        <string name="passwordchanged">Password changed</string>

        <string name="email">Kullanıcı adı</string>

        <string name="enter_password_again">Enter password again</string>

        <string name="passwordsnotmatch">Passwords not match</string>
        <string name="codenotmatch">Securty code not match</string>
        <string name="timeout">Request timeout. Please check your network</string>

        <string name="floors">Floors</string>
        <string name="map">Map</string>
        <string name="your_active_slot">Your Active Slot</string>
        <string name="profile">Profile</string>
        <string name="myslot">My Slot</string>
        <string name="myusage">My Usage</string>
        <string name="signout">Sign Out</string>
        <string name="phone">Phone</string>
        <string name="currentpassword">Current Password</string>


        <string name="starttime">Start Time</string>
        <string name="endtime">End Time</string>
        <string name="startdate">Start Date</string>
        <string name="enddate">End Date</string>
        <string name="parkcount">Park Count</string>
        <string name="averageduration">Average Duration</string>
        <string name="totalduration">Total Duration</string>
        <string name="noreserved">no reserved slot for you!</string>
        <string name="releaseplain">Release Plan</string>
        <string name="newslotrequest">Please select time</string>
        <string name="releaseslot">Release Slot</string>
        <string name="releaseplainadded">Release plan has confirmed</string>
        <string name="releaseplainnotadded">Release plan has not confirmed</string>
        <string name="youhasnotslot">You have not got any slot</string>
        <string name="nodata">Floor data not found</string>

        <string name="isrouted">We found indication of root</string>
        <string name="releaseyourslot"> Release Your Slot</string>
        <string name="enterregisteredemail">Enter registered email</string>
        <string name="restorepassword">Restore Password</string>
        <string name="sendsecuritycode">Send Security Code</string>
        <string name="enter_security_code">Enter Security Code</string>
        <string name="validate">Validate Code</string>
    </resources>