<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.arneca.evyap.helper.RelativeLayoutWithBackground
        android:id="@+id/loginRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logincmx">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"

            android:orientation="vertical"
            tools:context=".ui.activity.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_header"
                android:layout_width="250dp"
                android:layout_height="155dp"
                android:layout_gravity="top|center"
                android:background="@drawable/cemixlogo" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/login_mail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_header"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/login_email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_mail_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_email_ed"
                    android:padding="10dp"
                    android:text="@string/password"
                    android:textColor="@color/white" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/login_password_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_password_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <LinearLayout
                    android:id="@+id/rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/login_password_ed"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/rememberMeButton"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/uncehecked"
                        android:scaleType="fitStart" />

                    <arneca.com.utility.view.text.TextViewWithFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_marginLeft="10dp"
                        android:text="@string/remember"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rememberMe"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">
                    <arneca.com.utility.view.text.TextViewWithBoldFont
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:background="@drawable/circle_register_btn_back"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="18sp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        tools:text="Giriş Yap" />
                    <arneca.com.utility.view.text.TextViewWithBoldFont
                        android:id="@+id/restorePass"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="26dp"
                        android:background="@drawable/circle_register_btn_back"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="18sp"
                        android:text="Şifremi Değiştir"

                        android:textColor="@color/white"
                        tools:text="Şifremi Değiştir"  />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.arneca.evyap.helper.RelativeLayoutWithBackground>
</layout>