<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <com.arneca.evyap.helper.RelativeLayoutWithBackground
        android:id="@+id/loginRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logincmx">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            tools:context=".ui.activity.LoginActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_header"
                    android:layout_width="250dp"
                    android:layout_height="155dp"
                    android:layout_gravity="top|center"
                    android:background="@drawable/cemixlogo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="00dp">


                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_header"
                    android:layout_marginLeft="10dp"
                    android:text="Kullanıcı Adı"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/usernameEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_mail_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/existingPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_header"
                    android:layout_marginLeft="10dp"
                    android:text="Mevcut Şifre"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/existingPassEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_mail_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_header"
                    android:layout_marginLeft="10dp"
                    android:text="@string/newpassword"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/pass1ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_mail_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.text.TextViewWithBoldFont
                    android:id="@+id/pass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_header"
                    android:layout_marginLeft="10dp"
                    android:text="@string/newpasswordagain"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <arneca.com.utility.view.input.EditTextWithFont
                    android:id="@+id/pass2ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_mail_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rememberMe"
                    android:orientation="vertical">
                    <arneca.com.utility.view.text.TextViewWithBoldFont
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="26dp"
                        android:background="@drawable/circle_register_btn_back"
                        android:gravity="center"
                        android:imeOptions="actionDone"

                        android:textSize="18sp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        tools:text="@string/save" />

                    <arneca.com.utility.view.text.TextViewWithBoldFont
                        android:id="@+id/txtCancel"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="26dp"
                        android:background="@drawable/circle_register_btn_back"
                        android:gravity="center"
                        android:imeOptions="actionDone"

                        android:textSize="18sp"
                        android:text="Vazgeç"
                        android:textColor="@color/white"
                        tools:text="Vazgeç" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.arneca.evyap.helper.RelativeLayoutWithBackground>
</layout>